修改一些文案和细节

--- a/Application/Phone/View/Activity/couponDetail.html
+++ b/Application/Phone/View/Activity/couponDetail.html
@@ -25,7 +25,7 @@
                         {$info['stime'] | date="m月d日 H:i",###}
                         至
                         {$info['etime'] | date="m月d日 H:i",###}<br>
-                        关注<a href="#">店多多</a>，有更多惊喜。
+                        关注<a href="{:UC('Public/showMa')}">店多多</a>，有更多惊喜。
                     </p>
                 </div>
 
