--- a/Application/Phone/View/Shop/openShop.html
+++ b/Application/Phone/View/Shop/openShop.html
@@ -58,7 +58,7 @@
                                    type="text"
                                    name="phone"
                                    required
-                                   placeholder="请填写座机或手机号码">
+                                   placeholder="请填写手机号码">
                         </div>
                     </div>
                 </div>
