--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -24,11 +24,11 @@
             </div>
 
 
-            <div class="weui_cells_title">联系电话</div>
+            <div class="weui_cells_title">联系手机</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" placeholder="请输入您的联系电话"
+                        <input class="weui_input" placeholder="请输入您的联系手机"
                                name="phone" value="{$info['phone']}"
                                required>
                     </div>
