活动商品改版

--- a/Application/Phone/View/Miaoji/detail.html
+++ b/Application/Phone/View/Miaoji/detail.html
@@ -67,7 +67,8 @@
                         </tr>
                     </table>
                     <div class="margin-top" style="padding: 10px 0;">
-                        {$info['intro']}
+                        {$info['intro']}<br>
+                        联系我时，请说是在店多多看到的，谢谢！
                     </div>
                 </div>
 
