--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -165,7 +165,7 @@ a.btnitem{display: block;}
 .activity-goodslist-box{margin-top: 15px;}
 .activity-goods-box{border-bottom: 1px solid #dddddd;padding: 10px 0;background: #fff;}
 a.activity-goods-box{color: #333333;}
-.activity-goods-img{width: 120px;height:150px;margin-right: 10px;}
+.activity-goods-img{width: 100%;}
 .activity-goods-infobox .price{padding: 10px;margin-top: 5px;}
 .activity-goods-infobox .price .price-value{color: #990073;}
 .activity-goods-infobox .intro{margin-top: 5px;}
@@ -186,8 +186,6 @@ a.activity-goods-box{color: #333333;}
 .activity-intro{background: #fff;padding: 10px;}
 .button-box{margin-top: 30px;padding: 0 10px;}
 
-.activity-goods-btn{background: orange;text-align: center;color: #fff;}
-.activity-shopname{}
 
 .new-activity-title-box{height: 50px;}
 
@@ -215,6 +213,17 @@ a.activity-goods-box{color: #333333;}
 .coupon-qcode-box .qcode-box{width: 90%;background: #fff;padding: 20px;margin: 30px auto 0 auto;}
 .coupon-qcode-box .qcode-box > img{width: 100%;margin-top: 10px;}
 .coupon-shop-info{padding: 10px;text-align: left;width: 80%;margin: 0 auto;}
+
+
+.activity-goods-list{-webkit-column-count: 2;column-count: 2;-webkit-column-gap: 20px;}
+.activity-panel{background: #fff;margin-top: 20px;}
+.activity-panel >a{display: block;}
+.activity-content{color: #333333;}
+.activity-shopname{padding: 5px;}
+.acactivity-goods-btns{}
+.activity-goods-btn{background: orange;text-align: center;color: #fff;}
+.activity-panel-price{padding: 10px;}
+.activity-panel-title{padding: 10px 10px 0 10px;}
 
 .article .hd{padding: 2em 0;}
 .article .page_title {
