--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -165,7 +165,7 @@ a.btnitem{display: block;}
 .activity-goodslist-box{margin-top: 15px;}
 .activity-goods-box{border-bottom: 1px solid #dddddd;padding: 10px 0;background: #fff;}
 a.activity-goods-box{color: #333333;}
-.activity-goods-img{width: 100%;}
+.activity-goods-img{width: 120px;height:150px;margin-right: 10px;}
 .activity-goods-infobox .price{padding: 10px;margin-top: 5px;}
 .activity-goods-infobox .price .price-value{color: #990073;}
 .activity-goods-infobox .intro{margin-top: 5px;}
@@ -224,6 +224,7 @@ a.activity-goods-box{color: #333333;}
 .activity-goods-btn{background: orange;text-align: center;color: #fff;}
 .activity-panel-price{padding: 10px;}
 .activity-panel-title{padding: 10px 10px 0 10px;}
+.activity-goods-img2{width: 100%;}
 
 .article .hd{padding: 2em 0;}
 .article .page_title {
