--- a/Application/Phone/View/Activity/hotActivityGoodsList.html
+++ b/Application/Phone/View/Activity/hotActivityGoodsList.html
@@ -12,29 +12,52 @@
                 <empty name="list">
                     <div class="text-center margin-top30 gray-text no-goods">这个板块目前还没有商品哦，赶紧上架抢在最前面！</div>
                     <else/>
-                    <div class="activity-goods-list">
-                        <volist name="list" id="info">
-                            <div class="activity-panel goods-item glist">
-                                <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}" class="lk activity-content">
+                    <volist name="list" id="info">
+                        <if condition="$info['imgUrl']">
+                            <div class="activity-goods-box flex glistImg" style="padding: 10px;">
+                                <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}" class="lk">
                                     <img class="activity-goods-img im" src="{$info['imgUrl']}" />
-                                    <h3 class="activity-panel-title text-line2 nn">{$info['name']}</h3>
-                                    <div class="activity-panel-price">
-                                        特价:<span class="pp red-text">{$info['price']}</span>
-                                        <div class="remove-text"><span class="op">{$info['original_price']}</span></div>
-                                    </div>
                                 </a>
-                                <div class="acactivity-goods-btns">
-                                    <div class="activity-goods-btn">
-                                        <a class="activity-btn like likebtn lb" href="javascript:;" data-id="{$info['id']}">
+                                <div class="activity-goods-infobox flex-1">
+                                    <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']) )}" class="black-text lk">
+                                        <h3 class="text-line2 new-activity-title-box nn">{$info['name']}</h3>
+                                    </a>
+                                    <div class="price" style="margin-top: -5px;">
+                                        特价：<span class="price-value pp">{$info['price']}</span>
+                                        <span class="price-value remove-text op">{$info['original_price']}</span>
+                                    </div>
+                                    <div class="activity-goods-btns">
+                                        <div class="activity-goods-btn">
+                                            <a class="activity-btn like likebtn lb" href="javascript:;" data-id="{$info['id']}">
+                                                <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="activity-shopname gray-text2">来自：<span class="red-text sn">{$info['shopName']}</span></div>
+                                </div>
+                            </div>
+                            <else/>
+                            <div class="activity-goods-box-nopic glist">
+                                <a class="text-line2 goods-title lk nn" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}?dd=1">
+                                    {$info['name']}
+                                </a>
+                                <div class="activity-goods-infobox flex">
+                                    <a class="activity-goods-contentBox flex-1 lk" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}">
+                                        <p class="activity-goods-price">
+                                            特价：<span class="price-value red-text pp">{$info['price']}</span>
+                                            <span class="price-value remove-text op">{$info['original_price']}</span>
+                                        </p>
+                                        <div class="activity-shopname gray-text">来自：<span class="orange-text sn">{$info['shopName']}</span></div>
+                                    </a>
+                                    <div class="like-box">
+                                        <div class="activity-btn like likebtn lb" data-id="{$info['id']}">
                                             <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
-
-                                <div class="activity-shopname gray-text2"><span class="sn">{$info['shopName']}</span></div>
                             </div>
-                        </volist>
-                    </div>
+                        </if>
+                    </volist>
                 </empty>
 
             </div>
@@ -44,7 +67,7 @@
             </div>
 
             <p class="gray-text1 text-center small-text margin-top30">
-                如果您的店铺也想参与活动，就点击<a href="{:UC('Shop/index')}" external>活动</a>吧。
+                如果您的店铺也想参与活动，就点击<a href="{:UC('Shop/index')}" external>编辑活动</a>吧。
             </p>
         </div>
         <div class="fixbtnbox">
