--- a/Application/Phone/View/Activity/hotActivityGoodsList.html
+++ b/Application/Phone/View/Activity/hotActivityGoodsList.html
@@ -14,7 +14,7 @@
                     <else/>
                     <volist name="list" id="info">
                         <if condition="$info['imgUrl']">
-                            <div class="activity-goods-box flex glistImg" style="padding: 10px;">
+                            <div class="activity-goods-box flex flex-align-center glistImg" style="padding: 10px;">
                                 <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}" class="lk">
                                     <img class="activity-goods-img im" src="{$info['imgUrl']}" />
                                 </a>
