修改上传图片文案

--- a/Application/Phone/View/Shop/goodsEdit.html
+++ b/Application/Phone/View/Shop/goodsEdit.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <div class="weui_cells_title">商品照片（建议上传竖图片）</div>
+            <div class="weui_cells_title">商品照片</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
