--- a/Application/Phone/View/Activity/showAllActivity.html
+++ b/Application/Phone/View/Activity/showAllActivity.html
@@ -11,7 +11,7 @@
                 <div class="yspanel margin-top30">
                     <a href="{:UC('Activity/activityInfo',array('id'=>$info['id']))}">
                         <div class="yspanel-titlebox flex">
-                            <div class="flex-1">
+                            <div class="flex-1 text-line2">
                                 {$info['name']}
                                 <span class="pull-right small-text
                                 <?php if($info['status'] == 1){
