后台加入可选择是否发布商品的选项

--- a/Application/Phone/View/Shop/activity.html
+++ b/Application/Phone/View/Shop/activity.html
@@ -24,7 +24,7 @@
                         <ul>
                             <volist name="list" id="info">
                                 <li>
-                                    <a href="{:UC('Shop/activityEdit',array('id'=>$info['id']))}" class="item-link item-content">
+                                    <a href="{:UC('Shop/activityEdit',array('id'=>$info['id']))}" class="item-link item-content" data-no-cache="true">
                                         <div class="item-media">
                                             <div class="item-img" style="background-image: url({$info['faceImgUrl']['url']})">
                                             </div>
