--- a/Application/Phone/View/Shop/activityEdit.html
+++ b/Application/Phone/View/Shop/activityEdit.html
@@ -133,9 +133,9 @@
 
         <div class="popup popup-goodsList">
             <div class="content-block">
-                <p><a href="#" class="close-popup" id="closePublish">返回编辑页</a></p>
+                <p><a href="javascript:;" class="close-popup weui_btn weui_btn_mini weui_btn_default" id="closePublish">返回编辑页</a></p>
                 <empty name="goodslist">
-                        <span class="tip">您还没有上传商品，返回<a href="{:UC('Shop/index')}">首页</a>后进入“商品”进行管理吧</span>
+                        <span class="tip">您还没有发布商品，返回<a href="{:UC('Shop/index')}">首页</a>后进入“商品”进行管理吧</span>
                 <else/>
 
                     <form id="selectGoods">
