--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -231,6 +231,8 @@ a.activity-goods-box{color: #333333;}
 .activity-panel-title{padding: 10px 10px 0 10px;}
 .activity-goods-img2{width: 100%;}
 
+.main-price{font-size: 16px;color: red;}
+
 .article .hd{padding: 2em 0;}
 .article .page_title {
     color: #de7c23;
