修改分享文案和优惠券文案

--- a/Application/Phone/View/Activity/couponList.html
+++ b/Application/Phone/View/Activity/couponList.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="activity-intro">
-                    各商家劲爆优惠券出炉啦，五一优惠券大放送，赶紧叫上亲朋好友，拿起手机开抢吧。
+                    各商家劲爆优惠券出炉啦，五一优惠券大放送，赶紧叫上亲朋好友，拿起手机开抢吧。抢到优惠券后，可到“店多多”微信菜单中的<a href="{:UC('Activity/couponUser')}" external>“我的优惠券”</a>查看。
                 </div>
 
                 <div class="activity-content row" style="margin-top: 15px;padding: 0 5px;">
