--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -75,7 +75,7 @@
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <textarea class="weui_textarea" placeholder="请店铺简介" rows="3" name="intro" required>{$info['intro']}</textarea>
+                        <textarea class="weui_textarea" placeholder="请店铺简介" rows="3" name="intro">{$info['intro']}</textarea>
                         <div class="weui_textarea_counter">200字以内</div>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
             </div>
             <input type="hidden" name="id" value="{$info['id']}">
             <div class="weui_btn_area">
-                <button class="weui_btn weui_btn_primary" id="shopDetailBtn">更新</button>
+                <button class="weui_btn weui_btn_primary" id="shopDetailBtn">更新（要点这里）</button>
             </div>
             </form>
 
