添加分享提示文案

--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -23,7 +23,8 @@
                 </div>
 
                 <div class="activity-intro activity-info-panel">
-                    {$info['intro']}
+                    {$info['intro']}<br>
+                    好东西别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
                 </div>
 
                 <div class="activity-info-panel margin-top">
