--- a/Application/Phone/View/Activity/hotActivity.html
+++ b/Application/Phone/View/Activity/hotActivity.html
@@ -12,7 +12,8 @@
                 </div>
 
                 <div class="activity-intro">
-                    北流“五一”全体商家大让利，店多多收集了大量“五一”各商家的优惠信息，让大家在尽享优惠价，买的开心，买的便宜。
+                    北流“五一”全体商家大让利，店多多收集了大量“五一”各商家的优惠信息，让大家在尽享优惠价，买的开心，买的便宜。<br>
+                    好东西别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
                 </div>
 
                 <div class="activity-content row">
