--- a/Application/Phone/View/Miaoji/detail.html
+++ b/Application/Phone/View/Miaoji/detail.html
@@ -68,7 +68,8 @@
                     </table>
                     <div class="margin-top" style="padding: 10px 0;">
                         {$info['intro']}<br>
-                        联系我时，请说是在店多多看到的，谢谢！
+                        联系我时，请说是在店多多看到的，谢谢！<br>
+                        好店铺别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
                     </div>
                 </div>
 
