--- a/Application/Phone/View/Activity/hotActivityGoodsInfo.html
+++ b/Application/Phone/View/Activity/hotActivityGoodsInfo.html
@@ -22,7 +22,8 @@
                         </div>
 
                         <div class="activity-descBox">
-                            {$info['intro']}
+                            {$info['intro']}<br>
+                            好东西别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
                         </div>
 
                         <div class="row activity-btngroup">
