--- a/Application/Phone/View/Activity/hotActivity.html
+++ b/Application/Phone/View/Activity/hotActivity.html
@@ -35,4 +35,8 @@
             </p>
         </div>
     </div>
+    <script>
+        var shareIntro = "{$share.intro}";
+        var shareTitle = "{$share.title}";
+    </script>
 </block>
