修改文案和位置

--- a/Application/Phone/View/Activity/couponList.html
+++ b/Application/Phone/View/Activity/couponList.html
@@ -44,4 +44,8 @@
             <a class="fixbtn showMenu" href="#"><i class="iconfont">&#xe602;</i></a>
         </div>
     </div>
+    <script>
+        var shareIntro = "{$share.intro}";
+        var shareTitle = "{$share.title}";
+    </script>
 </block>
