下架五一信息

--- a/Application/Phone/View/Activity/hotActivity.html
+++ b/Application/Phone/View/Activity/hotActivity.html
@@ -8,12 +8,12 @@
             </div>
             <div class="hot-activity-box hot">
                 <div class="activity-banner">
-                    <img src="__PUBLIC__/images/banner.png">
+                    <img src="http://media.dianduoduo.top/UploadFile/gfhjhfvhdfvgd.png">
                 </div>
 
                 <div class="activity-intro">
-                    北流“五一”全体商家大让利，店多多收集了大量“五一”各商家的优惠信息，让大家在尽享优惠价，买的开心，买的便宜。<br>
-                    好东西别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”。
+                    店多多汇聚北流各个商家的优惠商品，让北流人时时刻刻掌握北流商家的优惠动向，让大家在尽享优惠价，买的开心，买的便宜。<br>
+                    好东西别忘了分享给朋友，点击右上角菜单，选择“分享到朋友圈”，或者“分享给朋友”即可。
                 </div>
 
                 <div class="activity-content row">
@@ -28,10 +28,7 @@
                 </div>
             </div>
 
-
-
             <p class="gray-text1 text-center small-text margin-top30">
-
             </p>
         </div>
     </div>
